# time-protocol

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: egui_test.rs  server_starter.rs  tui_test.rs
src/: lib.rs  time_client.rs  time_server.rs  tool.rs
